[Autofill Views] Fixing Corners/Scrolling Interaction

This CL fixes an undesired interaction between the rounded corners and
the scroll view in the new dropdown. Specifically, we observed that the
clipping path was not being respected on Mac when applied to the
contents of the scroll view. This is fixed by applying the existing
padding outside, rather than inside, the scroll view, so that the
region being clipped is guaranteed to be non-scrollable padding. (n.b.:
the padding calculation ensures this is at least as much as large as
the corner radius.)

This also introduces a minor visual change in the scrolling case only,
as the padding above and below the suggestions no longer scrolls along
with the suggestions. Besides fixing the clipping bug, on platforms
other than Mac this also ensures the top of the scrollbar does not get
partially clipped.

Change-Id: I6ef7319db094ec66b64859df64031f6330dd567c
Bug: 863930
Reviewed-on: https://chromium-review.googlesource.com/1140913
Commit-Queue: Tommy Martino <tmartino@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576123}
Former-commit-id: 013bfb765a78f23c9e82fc13892a82cca41a5dc6